app/assets/stylesheets/custom.scss
/* ... */
// 14. Figure cards style
// - - - - - - - - - - - - - - - - - - - - - - - - -

.figure-card {
  margin-left: 0;
  margin-right: 0;
  margin-top: 0;
  position: relative;

  &.pdf::after {
    background: image-url('icon_pdf_white.png');
    content: '';
    height: 48px;
    position: absolute;
    right: 10px;
    top: 10px;
    width: 48px;
  }

  a {

    h3,
    .title {
      color: #fff;
    }

    &:hover {
      text-decoration: none;
    }
  }

  figcaption {
    bottom: 0;
    color: #fff;
    font-family: 'Franklin Gothic' !important;
    font-size: rem-calc(36);
    line-height: rem-calc(36);
    text-transform: uppercase;
    padding: $line-height / 4 $line-height / 2;
    position: absolute;
    width: 100%;

    h3,
    .title {
      font-family: 'Franklin Gothic' !important;
      font-size: rem-calc(36);
      line-height: rem-calc(36);
    }

    span {
      background: #fff;
      border-radius: rem-calc(4);
      color: #000;
      display: inline;
      font-size: $base-font-size;
      padding: rem-calc(4) rem-calc(8);
    }
  }
}

// 15. User recommendations
// - - - - - - - - - - - - - - - - - - - - - - - - -

.section-recommended {
  border-top: 1px solid $border;
  padding: $line-height 0;

  h2 {
    margin-bottom: 0;
  }

  p {
    margin-bottom: $line-height * 2;
  }

  .card .card-section {
    max-width: none;
    padding: 0;

    p {
      font-size: $base-font-size;
    }
  }

  .debates-inner,
  .proposals-inner,
  .budget-investments-inner {
    border-top: 0;

    h4 {
      margin-bottom: $line-height;
      margin-top: 0;
      min-height: 0;
    }
  }
}

.carousel-image {

  .debates,
  .proposals {

    a {
      display: block;
      margin-top: $line-height;
    }
  }

  .debates-inner,
  .proposals-inner {
    border: 1px solid $border;
    padding: $line-height;
    margin-right: $line-height;
  }
}

